# nuclei_poc

./: .gitignore  1-clone_repos.py  2-1-remove_duplicated.py  2-download_nuclei.py  2-remove_duplicated.py  3-check_poc.py  3-delete_duplicated.py  3-download_nuclei.py  3-get_pocname.py  3-move_file.py  4-check_poc.py  4-move_file.py  5-check_poc.py  5-check_poc.sh  5-get_pocname.py  6-get_count.py  Cargo.toml  README.md  README_EN.md  check_poc.sh  date.txt  main.py  poc.txt  repo.csv
.github/workflows/: check.yml  check_poc.yml  main.yml
poc/adobe/: AEM_misconfig.yaml  adobe-aem-default-credentials-4.yaml  adobe-aem-default-credentials-9.yaml  adobe-coldfusion-admin-interface.yaml  adobe-coldfusion-detect-1.yaml  adobe-coldfusion-detect-2.yaml  adobe-coldfusion-detect-4.yaml  adobe-coldfusion-detect-6.yaml  adobe-coldfusion-detect-84_1.yaml  adobe-coldfusion-detector-1.yaml  adobe-coldfusion-detector-2.yaml  adobe-coldfusion-detector-5.yaml  adobe-phish.yaml  adobe-phish_5_2.yaml  adobe-phish_7_1.yaml  aem-acs-common.yaml  aem-cached-pages.yaml  aem-cached-pages_4.yaml  aem-childrenlist-xss.yaml  aem-crx-bypass-1.yaml  aem-crx-bypass-133.yaml  aem-crx-bypass-2.yaml  aem-crx-bypass.yaml  aem-crx-bypass_5.yaml  aem-crx-namespace_1.yaml  aem-default-get-servlet-1.yaml  aem-default-get-servlet-12.yaml  aem-default-get-servlet-13.yaml  aem-default-get-servlet-15.yaml  aem-default-get-servlet-16.yaml  aem-default-get-servlet-18.yaml  aem-default-get-servlet-19.yaml  aem-default-get-servlet-2.yaml  aem-default-get-servlet-21.yaml  aem-default-get-servlet-23.yaml  (+39 more)
(+110013 files in other folders)
