[package]
name = "nuclei_poc"
version = "0.2.0"
edition = "2024"
authors = ["AdySec <admin@adysec.com>"]
description = "Nuclei POC更新整理工具"
license = "MIT"

[dependencies]
walkdir = "2.3"
sha2 = "0.10"
md5 = "0.8"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
which = "8.0"
zip = "6.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "process", "fs"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5.53", features = ["derive"] }
rayon = "1.6"
dashmap = "6.1"
strsim = "0.11"
regex = "1.7"
num_cpus = "1.17"
tempfile = { version = "3", optional = false }

